--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -1,31 +1,37 @@
-server:
-  port: 9000
-
-spring:
-  application:
-    name: order-service
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://192.168.168.128:3306/teach?useUnicode=true&characterEncoding=utf-8&useSSL=false
-    username: root
-    password: 123456
-  cloud:
-    nacos:
-      server-addr: 192.168.168.128:8848
-    sentinel:
-      transport:
-        dashboard: 192.168.168.128:8080
-        port: 10000
-
-#开启feign对sentinel的支持
-feign:
-  sentinel:
-     enabled: true
-
-
-# 控制台输出sql、下划线转驼峰
-mybatis:
-  configuration:
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-    map-underscore-to-camel-case: true
-
+#server:
+#  port: 9000
+#
+#spring:
+#  application:
+#    name: order-service
+#  zipkin:
+#    base-url: http://192.168.206.128:9411
+#    discovery-client-enabled: false
+#  sleuth:
+#    sampler:
+#      probability: 1.0 #采样百分比
+#  datasource:
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#    url: jdbc:mysql://192.168.206.128:3306/teach?useUnicode=true&characterEncoding=utf-8&useSSL=false
+#    username: root
+#    password: 123456
+#  cloud:
+#    nacos:
+#      server-addr: 192.168.206.128:8848
+#    sentinel:
+#      transport:
+#        dashboard: 192.168.206.128:8080
+#        port: 10000
+#
+##开启feign对sentinel的支持
+#feign:
+#  sentinel:
+#     enabled: true
+#
+#
+## 控制台输出sql、下划线转驼峰
+#mybatis:
+#  configuration:
+#    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+#    map-underscore-to-camel-case: true
+#
