--- a/user-service/Dockerfile
+++ b/user-service/Dockerfile
@@ -2,4 +2,4 @@ FROM adoptopenjdk/openjdk11:ubi
 VOLUME /tmp
 ARG JAR_FILE
 COPY ${JAR_FILE} app.jar
-ENTRYPOINT ["java","-jar","/app.jar"]
+ENTRYPOINT ["java","-jar","app.jar"]
