--- a/api-gateway/Dockerfile
+++ b/api-gateway/Dockerfile
@@ -1,5 +1,5 @@
 FROM adoptopenjdk/openjdk11:ubi
 VOLUME /tmp
 ARG JAR_FILE
-COPY ${JAR_FILE} app.jar
+COPY ${JAR_FILE} /app/app.jar
 ENTRYPOINT ["java","-jar","/app.jar"]
